<resources>
    <string name="app_name">Togfence</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="permission_rationale">Location access is needed for geofencing</string>
    <string name="insufficient_permissions">Location permissions not granted</string>
    <string name="permission_denied_explanation">Geofences cannot work without location access</string>
    <string name="play_services_not_available">Google Play services not available</string>
    <string name="play_services_problems">Problems with Play services, restart app</string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="no_active_geofence">No active geofence</string>

    <string name="unknown_geofence_error">Unknown geofence error</string>
    <string name="geofence_not_available">Geofencing not available</string>
    <string name="geofence_too_many_geofences">Too many geofences</string>
    <string name="geofence_too_many_pending_intents">Too many pending intents</string>
    <string name="geofence_transition_invalid_type">Invalid geofence transition type: %i</string>
    <string name="geofence_transition_notification_text">Transited in/from geofence</string>

    <string name="no_valid_toggl_api_key">You must set the toggl API key in preferences</string>
    <string name="no_toggl_workspaces">No toggl workspaces</string>
    <string name="toggl_description_start">togfence: start</string>
    <string name="toggl_description_stop">togfence: stop</string>
    <string name="toggl_created_with">Togfence</string>

    <string name="show_debugging_buttons_summary">Show some buttons, with which some debugging features can be triggered.</string>
    <string name="show_debugging_buttons_title">Show debug buttons</string>

    <string name="radius">Radius</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>

    <string name="toggl_project">Toggl Project</string>
    <string name="toggl_tags">Toggl Tags</string>

    <string name="new_geofence_element">New Geofence</string>

    <string name="pick_location">Pick Location</string>
    <string name="name">Name</string>
    <string name="active">active</string>
    <string name="running">running</string>
    <string name="stopped">stopped</string>
    <string name="delete">delete</string>
    <string name="save">save</string>

    <string name="geofences_active">Start/Stop Geofences</string>

    <string name="refresh_list">Refresh List</string>
    <string name="settings">Settings</string>

    <string name="pref_header_general">General</string>

    <string name="pref_title_autostart_geofencing_on_boot">Autostart Geofencing</string>
    <string name="pref_description_autostart_geofencing_on_boot">Autostart geofencing of active
        geofences on boot.
    </string>

    <string name="pref_title_toggl_api_key">Toggl API Key</string>
    <string name="pref_description_toggl_api_key">You toggl API Key</string>

    <string name="pref_title_responsiveness">Responsiveness</string>
    <string name="pref_description_responsiveness">Responsiveness. A shorter time value means that
    geofence updates are done in a shorter interval. This enables faster detection, but will drain
    battery and can be overridden by system battery saving settings (recommended value 5 min).</string>
    <string-array name="pref_responsiveness_list_titles">
        <item>As fast as possible</item>
        <item>10 Sec</item>
        <item>30 Sec</item>
        <item>1 Min</item>
        <item>5 Min</item>
        <item>10 Min</item>
        <item>30 Min</item>
        <item>1 H</item>
    </string-array>
    <string-array name="pref_responsiveness_list_values">
        <item>0</item>
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>300</item>
        <item>600</item>
        <item>1800</item>
        <item>3600</item>
    </string-array>
</resources>
