<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="autostart_geofencing_on_boot"
        android:summary="@string/pref_description_autostart_geofencing_on_boot"
        android:title="@string/pref_title_autostart_geofencing_on_boot" />

    <!--&lt;!&ndash; NOTE: EditTextPreference accepts EditText attributes. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: EditTextPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
    <!--<EditTextPreference-->
        <!--android:capitalize="words"-->
        <!--android:defaultValue="@string/pref_default_display_name"-->
        <!--android:inputType="textCapWords"-->
        <!--android:key="example_text"-->
        <!--android:maxLines="1"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:singleLine="true"-->
        <!--android:title="@string/pref_title_display_name" />-->

    <EditTextPreference
        android:capitalize="none"
        android:inputType="textNoSuggestions"
        android:defaultValue="NOTVALID"
        android:key="toggl_api_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_toggl_api_key"
        android:summary="@string/pref_description_toggl_api_key"/>


    <ListPreference
        android:entries="@array/pref_responsiveness_list_titles"
        android:entryValues="@array/pref_responsiveness_list_values"
        android:key="responsiveness"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_responsiveness"
        android:summary="@string/pref_description_responsiveness"
        android:defaultValue="300" />

</PreferenceScreen>
